--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                             </div>
                             <h3 class="card-title">الموقع الرسمي للمبادرة</h3>
                             <p class="card-description">تفضل بزيارة موقعنا الرسمي للمزيد من المعلومات والأخبار</p>
-                            <button class="card-button" onclick="window.open('https://www.facultyprime.com', '_blank')">
+                            <button class="card-button" onclick="window.open('under-deve.html', '_blank')">
                                 <span>زيارة الموقع</span>
                                 <svg class="button-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                                     <path d="M7 17L17 7M17 7H7M17 7V17"/>
